--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="es/style.css">
+    <title>Compra</title>
     <link rel="stylesheet" href="estilo/style.css">
-    <script src="/script/script.js" defer></script>
+    <script src="../js/script.js" defer></script>
 </head>
 
 <body>
