problema no link js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra</title>
     <link rel="stylesheet" href="estilo/style.css">
-    <script src="../Js/script.js" defer></script>
+    <script src="./Js/script.js" defer></script>
 </head>
 
 <body>
